Fix wrong colour for .menu--item.link, didn't do it right last time. Oops ToT.

--- a/_dev/css/components/mainmenu.scss
+++ b/_dev/css/components/mainmenu.scss
@@ -177,7 +177,7 @@
         margin: 0.5rem 0;
         padding: 0 $medium-space;
         justify-content: center;
-        color: $white;
+        color: #000;
         background-color: $white;
         border-radius: 100px;
         box-shadow: 1px 1px 3px #0005;
